# Boxxo

./: LICENSE  README.md  boxxo.sh  temp.urdf
resources/: urdf.rviz  wheel.urdf.xacro
src/boxxo_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
src/boxxo_controllers/src/: arm_controller.cpp  template.cpp
src/boxxo_core/: CMakeLists.txt  package.xml
src/boxxo_core/control/: boxxo_controllers.yaml
src/boxxo_core/launch/: boxxo.launch  xacro_viz.launch
src/boxxo_core/urdf/: boxxo.urdf.xacro  boxxo_arm.urdf.xacro  camera.urdf.xacro  wheel.urdf.xacro
src/boxxo_worlds/: CMakeLists.txt  package.xml
src/boxxo_worlds/models/Moon/: moon.dae
src/boxxo_worlds/worlds/: test_world.world
